# OpenAI_Agent_Swarm

./: .gitmodules  README.md
.github/workflows/: sync-folders.yml
DEMOS/fastapi/: README.md  docker-compose.yml
DEMOS/fastapi/docker/data/: .gitignore
DEMOS/fastapi/docker/tool_maker/: Dockerfile  README.md  pyproject.toml
DEMOS/fastapi/docker/tool_maker/scripts/: format.sh  run.sh
agents/: README.md  docker-compose.yml
agents/data/: README.md
agents/tool_maker/: .gitignore  Dockerfile  README.md
scripts/: run.sh
