[tool.black]
line-length = 79
target-version = ['py311']
include = '\.py$'
exclude = ['.git', '__pycache__', '__init__.py', '.mypy_cache', '.pytest_cache']

[tool.isort]
profile = "black"
force_single_line_imports = true
py_version = 311
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.autoflake]
recursive = true
remove_all_unused_imports = true
remove_unused_variables = true
in_place = true
exclude = ['.git', '__pycache__', '__init__.py', '.mypy_cache', '.pytest_cache']

[tool.poetry]
name = "hass-toolmaker"
version = "0.1.0"
description = "Toolmaker for Autonomous Agent Swarms"
authors = ["David Shapiro <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "*"
ipykernel = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
autoflake = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
